chore: retour à Java 8 (mais plus de Java 7...)